syntax = "proto3";

package bpm;

message SetBPM {
    int32 bpm = 1;
}
